# RemoteInput

./: CMakeLists.txt  LICENSE  README.md  build.sh
include/reminput/: reminput.hpp
source/: CMakeLists.txt  config.hpp
source/winapi/: reminput.cpp
tests/: CMakeLists.txt  wintest.cpp
